--- a/style.css
+++ b/style.css
@@ -1,9 +1,30 @@
+body{
+    padding: 20px;
+}
+.header{
+    display: flex;
+}
+.header .logo{
+    margin-left: auto;
+}
 #preview{
     background-color: #333333;
     color: white;
     padding: 20px;
     font-size: 12px;
+   
 }
 .error{
     color: red !important;
+}
+#editor{
+    border: 1px solid #333;
+    margin-top: 10px;
+}
+.preview h4{
+    background-color: #666;
+    margin: 0;
+    padding: 4px;
+    color: white;
+    font-size: 14px;
 }
