--- a/style.css
+++ b/style.css
@@ -3,9 +3,19 @@ body{
 }
 .header{
     display: flex;
+  
 }
 .header .logo{
     margin-left: auto;
+}
+.panels{
+    display: flex;
+    border: 1px solid #333;
+    margin-top: 10px;
+
+}
+.panel{
+    width: 50%;
 }
 #preview{
     background-color: #333333;
@@ -17,10 +27,7 @@ body{
 .error{
     color: red !important;
 }
-#editor{
-    border: 1px solid #333;
-    margin-top: 10px;
-}
+
 .preview h4{
     background-color: #666;
     margin: 0;
