--- a/style.css
+++ b/style.css
@@ -14,6 +14,16 @@ body{
     margin-top: 10px;
 
 }
+pre{
+    display: inline-block;
+  background-color: #f7f7f7;
+  color: #333;
+  padding: 0.2em 0.4em;
+  border-radius: 4px;
+  font-size: 0.9em;
+  line-height: 1.4;
+  font-family: 'Courier New', Courier, monospace;
+}
 .panel{
     width: 50%;
 }
