--- a/style.css
+++ b/style.css
@@ -1,50 +1,87 @@
-*{
-    font-family: 'Courier New', Courier, monospace;
+* {
+  font-family: "Courier New", Courier, monospace;
 }
-body{
-    padding: 20px;
+body {
+  padding: 20px;
 }
-.header{
-    display: flex;
-  
+.header {
+  display: flex;
 }
-.header .logo{
-    margin-left: auto;
+.header .logo {
+  margin-left: auto;
 }
-.panels{
-    display: flex;
-    border: 1px solid #333;
-    margin-top: 10px;
-
+.panels {
+  display: flex;
+  border: 1px solid #bcbcbc;
+  margin-top: 10px;
 }
-pre{
-    display: inline-block;
+pre {
+  display: inline-block;
   background-color: #f7f7f7;
-  color: #333;
-  padding: 0.2em 0.4em;
+  color: #191919;
+  padding: 1em;
   border-radius: 4px;
   font-size: 0.9em;
   line-height: 1.4;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
-.panel{
-    width: 50%;
+.panel {
+  width: 50%;
 }
-#preview{
-    background-color: #333333;
-    color: white;
-    padding: 20px;
-    font-size: 12px;
-   
+#preview {
+  background-color: #7c7c7c;
+  color: white;
+  padding: 20px;
+  font-size: 12px;
 }
-.error{
-    color: red !important;
+.error {
+  color: red !important;
 }
 
-.preview h4{
-    background-color: #666;
-    margin: 0;
-    padding: 4px;
-    color: white;
-    font-size: 14px;
+.preview h4 {
+  background-color: #666;
+  margin: 0;
+  padding: 4px;
+  color: white;
+  font-size: 14px;
+}
+
+.button {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #db3e4d;
+  border: none;
+  color: #ffffff;
+  text-align: center;
+  font-size: 18px;
+  padding: 8px 12px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: "\00bb";
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
 }
